--- a/build.yaml
+++ b/build.yaml
@@ -20,6 +20,6 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: aurora_corne_left
+    shield: aurora_corne_left nice_view_adapter nice_view
   - board: nice_nano_v2
-    shield: aurora_corne_right
+    shield: aurora_corne_right nice_view_adapter nice_view
