--- a/config/splitkb_aurora_corne.conf
+++ b/config/splitkb_aurora_corne.conf
@@ -3,7 +3,7 @@
 # CONFIG_WS2812_STRIP=y
 
 # Uncomment the following line to enable the Corne OLED Display
-# CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_KEYBOARD_NAME="Aurora Corne"
 CONFIG_ZMK_BATTERY_REPORTING=y
 CONFIG_ZMK_IDLE_TIMEOUT=60000
