--- a/.github/workflows/keymap.yml
+++ b/.github/workflows/keymap.yml
@@ -21,7 +21,8 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.11"
+          python-version: "3.13"
+          cache: "pip"
 
       - name: Install keymap-drawer
         shell: bash
