--- a/.github/workflows/keymap.yml
+++ b/.github/workflows/keymap.yml
@@ -5,7 +5,6 @@ on:
     branches: [main]
     paths:
       - "config/**/*.keymap"
-      - "config/**/*.dtsi"
   workflow_dispatch:
 
 jobs:
@@ -18,15 +17,13 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.13"
-          cache: "pip"
+      - name: Install pipx
+        shell: bash
+        run: apt install pipx
 
       - name: Install keymap-drawer
         shell: bash
-        run: pip install keymap-drawer
+        run: pipx install keymap-drawer
 
       - name: Generate keymap drawing
         run: |
