--- a/.github/workflows/keymap.yml
+++ b/.github/workflows/keymap.yml
@@ -10,7 +10,9 @@ on:
 jobs:
   generate-keymap:
     runs-on: ubuntu-latest
-
+    permissions:
+      contents: write
+      pull-requests: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
